# flappy_bird_clone

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.yaml  todo.md  toto.md  toto.txt
.github/workflows/: doc_gen.txt  doc_gen.yml
assets/: background.xcf  bird.xcf  menu_blur.xcf  pipe_body.xcf  pipe_head.xcf
data/: config.ini  example_best_bird.pickle  log_config.json
docs/: doc-requirements.txt  flappy_bird.html  flappy_bird_NN.html  index.html  search.js
docs/flappy_bird/: NN.html  bird.html  bird_population.html  blocks.html  button.html  constants.html  displayed_texts.html  main.html  window.html
docs/flappy_bird_NN/: NN.html  bird.html  bird_population.html  blocks.html  button.html  constants.html  displayed_texts.html  graph.html  main.html  window.html
docs/source/: conf.py  flappy_bird.rst  modules.rst
flappy_bird/: NN.py  NN_functions.py  __init__.py  bird.py  bird_population.py  blocks.py  button.py  constants.py  displayed_texts.py  main.py  menu.py  window.py
flappy_bird_NN/: NN.py  bird.py  bird_population.py  blocks.py  constants.py  graph.py  main.py  window.py
mesa-18.2.3/usr/local/lib/x86_64-linux-gnu/: libGLESv1_CM.so.1.0.0  libGLESv2.so.2.0.0  libglapi.so.0.0.0
mesa-18.2.3/usr/local/lib/x86_64-linux-gnu/pkgconfig/: gl.pc  glesv1_cm.pc  glesv2.pc  osmesa.pc
src/: __init__.py  bird.py  blocks.py  constants.py  main.py  window.py
tests/: test_flappy_bird.py
