[tool.poetry]
name = "flappy_bird"
version = "0.1.0"
description = ""
authors = ["David Schippers <david.schip@posteo.de>"]

[tool.poetry.dependencies]
python = "^3.8"
mushroom-rl = "^1.7.0"
pyglet = "^1.5.17"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
